# LR_8

./: .gitmodules  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  Dockerfile  LICENSE  README.md
.github/workflows/: release.yml  yml.yml
banking/: Account.cpp  Account.h
testing/: mock_class.cpp  test.cpp
